@@ -1,6 +1,11 @@
 /***********************************************************************
 X3 ChangeLog
 
+2009-01-27  Alex Schumann  <rubin@afternet.org>
+
+	* src/opserv.c: Fix a hole Sindacious found, where alerts on account
+	don't trigger because they arent looked for during/after auth.
+
 2009-01-26  Alex Schumann  <rubin@afternet.org>
 
 	* src/plugins/annoy/plugin.py: more test code
